Add ClojureScript support (#524). 0.3.0-SNAPSHOT 1. Other issues and PRs: #481, #560, #563
Add ClojureScript support

Co-authored-by: Joakim Tengstrand <joakimtengstrand@gmai.com>
Co-authored-by: Imre Kószó <imrekoszo@users.noreply.github.com>